--- a/package.json
+++ b/package.json
@@ -9,22 +9,35 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/change-case": "^2.3.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-scroll": "^1.8.2",
+    "@types/yup": "^0.29.11",
+    "change-case": "^4.1.2",
+    "emailjs-com": "^2.6.4",
     "emotion-theming": "^11.0.0",
+    "formik": "^2.2.6",
     "onno-react": "^1.0.0",
     "prettier": "^2.2.1",
+    "querystring": "^0.2.1",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.1",
+    "react-spinners": "^0.10.6",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9",
+    "yup-phone-lite": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
