--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.0",
+    "@types/react-burger-menu": "^2.6.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
@@ -28,6 +29,7 @@
     "querystring": "^0.2.1",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
